add synthesis flow

--- a/bin/proj.env
+++ b/bin/proj.env
@@ -10,6 +10,7 @@ setenv TCROOT `git rev-parse --show-toplevel`
 setenv SIM_DIR $TCROOT/sim
 setenv RTL_DIR $TCROOT/rtl
 setenv BIN_DIR $TCROOT/bin
+setenv SYN_DIR $TCROOT/syn
 set reldir=`chdir $TCROOT/../../release && pwd`
 echo $reldir
 setenv REL_DIR $reldir
